--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,7 +12,8 @@
     "@supabase/supabase-js": "^2.46.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "eslint": "^8",
